--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 
 	
 	/*---------------*/
-	.menu_div2{}
 	
 	.meun_div2_2{display:flex; align-items:center; justify-content:center; padding-top:50px;padding-bottom:50px;padding-left:100px;padding-right:100px; ;}
 	.phone_menu{position:absolute; left:30px; font-size:20px; cursor:pointer;}
@@ -75,10 +74,10 @@
 	
 
 	
-	@media screen and (max-width:1000px){
+	@media screen and (max-width:1200px){
 		.menu_div1 {display: none;}}
 		
-	@media screen and (min-width:1001px){
+	@media screen and (min-width:1201px){
 		.menu_div2 {display: none;}	}
 		
 		
@@ -102,7 +101,7 @@
 	.art_text{font-family: 'Indie Flower', cursive; font-weight:bold; font-size:30px; color:white; width:500px; border:px solid red;position:absolute; top:530px;left:100px;}
 	.art_but{width:175px; height:70px; position:absolute; border:3px solid white; border-radius:10px; top:620px;left:100px; color:white; display:flex; align-items:center; justify-content:center;font-family: 'Indie Flower', cursive; font-weight:bold; font-size:20px;}
 
-	@media screen and (max-width:1000px){
+	@media screen and (max-width:1200px){
 		.article1{z-index:10; margin-top:0px;}
 		.art_ele{position:absolute;; top:calc(50% - 200px);left:calc(50% - 150px); border:px solid red; z-index:200; width:300px; height:450px;}
 	.ele_img{position:absolute;}
@@ -129,7 +128,7 @@
 	
 	
 	/*----------*/
-	@media screen and (max-width:1000px){
+	@media screen and (max-width:1200px){
 	    .article2_top>h1{font-family: 'Kanit', sans-serif; font-size:29px}
 		.article2_top>span{font-family: 'Indie Flower', cursive;font-size:18px;}
 	}
@@ -159,7 +158,6 @@
 .star .empty_star i{color: #FFB7D4;}
 .star .full_star i{color: #FFB7D4;}
 
-.star .empty_star{}
 .star .full_star{width: 50px;}
 
 .item:nth-child(1) .full_star{width: 80px;}
@@ -192,7 +190,7 @@
 	.sec4_google>img{margin-right:20px; cursor:pointer;}
 	
 	
-	@media screen and (max-width:1000px){
+	@media screen and (max-width:1200px){
 		
 		.section4>img{display:none;}
 		.section4{background-color:#FFB7D4;width:100%;height:600px;}
@@ -250,7 +248,7 @@
 	.sec6_left_img>img:nth-child(5){top:300px; left:-100px;transform:rotate(-30deg)}
 	
 	
-	@media screen and (max-width:1000px){
+	@media screen and (max-width:1200px){
 		.sec6_inbox{display:flex; align-items:center; justify-content:center; flex-direction:column}
 		.sec6_box_in{display:flex; align-items:center; justify-content:space-between; width:150px;font-family: 'Kanit', sans-serif; color:white}
 		.sec6_box_in>div{border-bottom:1px dashed white; width:30px;}
@@ -296,7 +294,7 @@
 	
 	/*-------sec9--------*/
 	.section9{background:black; padding-top:100px; padding-bottom:100px;}
-	.sec9_item{display:flex;align-items:; justify-content:flex-start; flex-direction:column;}
+	.sec9_item{display:flex; justify-content:flex-start; flex-direction:column;}
 	.sec9_item>h3{font-size:20px; color:#DCDCDC;font-family: 'Kanit', sans-serif;}
 	.sec9_item i{padding:0;margin-top:10px;margin-bottom:10px;}
 	.sec9_item>h4{font-size:14px; color:#DCDCDC;font-family: 'Kanit', sans-serif;}
@@ -306,7 +304,7 @@
 	.sec9_right>div{display:flex;}
 	.sec9_right>div>img{width:33.5%; height:30%;}
 	.sec9_left_img{width:80%;}
-	@media screen and (max-width:1000px){
+	@media screen and (max-width:1200px){
 		.sec9_item{display:flex;align-items:center; justify-content:center; flex-direction:column;}
 		.sec9_right>div{display:flex;align-items:center;}
 		.sec9_right{display:flex; align-items:center;flex-direction:column;margin-top:30px; border:px solid red}
